created method findinJson